fix: use touch-action:manipulation to disable double-tap zoom magnifier on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @layer base {
   body {
     overscroll-behavior: none;
-    touch-action: none;
+    touch-action: manipulation;
     user-select: none;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
